[search] Auto-generated strings.

--- a/android/res/values-ar/strings.xml
+++ b/android/res/values-ar/strings.xml
@@ -198,6 +198,7 @@
 	<string name="parking">الاصطفاف</string>
 	<!-- Search Suggestion -->
 	<string name="shop">المتجر</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">الفندق</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">سياحة</string>
