--- a/android/res/values-da/strings.xml
+++ b/android/res/values-da/strings.xml
@@ -196,6 +196,7 @@
 	<string name="parking">Parkering</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Butik</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Seværdigheder</string>
