--- a/android/res/values-de/strings.xml
+++ b/android/res/values-de/strings.xml
@@ -198,6 +198,7 @@
 	<string name="parking">Parkplatz</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Geschäft</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Sehenswürdigkeit</string>
