--- a/android/res/values-es/strings.xml
+++ b/android/res/values-es/strings.xml
@@ -187,6 +187,7 @@
 	<string name="parking">Estacionamiento</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Tienda</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Turismo</string>
