--- a/android/res/values-fi/strings.xml
+++ b/android/res/values-fi/strings.xml
@@ -192,6 +192,7 @@
 	<string name="parking">Parkkipaikka</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Kauppa</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotelli</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Nähtävyydet</string>
