--- a/android/res/values-fr/strings.xml
+++ b/android/res/values-fr/strings.xml
@@ -197,6 +197,7 @@
 	<string name="parking">Stationnement</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Magasin</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hôtel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Site touristique</string>
