--- a/android/res/values-hu/strings.xml
+++ b/android/res/values-hu/strings.xml
@@ -193,6 +193,7 @@
 	<string name="parking">Parkoló</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Bolt</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Szálloda</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Látnivaló</string>
