--- a/android/res/values-in/strings.xml
+++ b/android/res/values-in/strings.xml
@@ -192,6 +192,7 @@
 	<string name="parking">Parkir</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Toko</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Pemandangan</string>
