--- a/android/res/values-ja/strings.xml
+++ b/android/res/values-ja/strings.xml
@@ -193,6 +193,7 @@
 	<string name="parking">駐車場</string>
 	<!-- Search Suggestion -->
 	<string name="shop">買い物</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">ホテル</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">観光</string>
