--- a/android/res/values-ko/strings.xml
+++ b/android/res/values-ko/strings.xml
@@ -194,6 +194,7 @@
 	<string name="parking">주차</string>
 	<!-- Search Suggestion -->
 	<string name="shop">쇼핑</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">호텔</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">관광</string>
