--- a/android/res/values-nb/strings.xml
+++ b/android/res/values-nb/strings.xml
@@ -192,6 +192,7 @@
 	<string name="parking">Parkering</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Butikk</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotell</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Severdigheter</string>
