--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -192,6 +192,7 @@
 	<string name="parking">Parkeerplaats</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Winkel</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Toerisme</string>
