--- a/android/res/values-pl/strings.xml
+++ b/android/res/values-pl/strings.xml
@@ -195,6 +195,7 @@
 	<string name="parking">Parking</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Sklep</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Atrakcje turystyczne</string>
