--- a/android/res/values-pt/strings.xml
+++ b/android/res/values-pt/strings.xml
@@ -191,6 +191,7 @@
 	<string name="parking">Estacionamento</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Compras</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Vistas</string>
