--- a/android/res/values-ro/strings.xml
+++ b/android/res/values-ro/strings.xml
@@ -192,6 +192,7 @@
 	<string name="parking">Parcare</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Magazin</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Obiective turistice</string>
