--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -198,6 +198,7 @@
 	<string name="parking">Парковка</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Магазин</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Гостиница</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Достопримечательность</string>
