--- a/android/res/values-sk/strings.xml
+++ b/android/res/values-sk/strings.xml
@@ -193,6 +193,7 @@
 	<string name="parking">Parkovisko</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Obchod</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Pamätihodnosť</string>
