--- a/android/res/values-sv/strings.xml
+++ b/android/res/values-sv/strings.xml
@@ -194,6 +194,7 @@
 	<string name="parking">Parkering</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Butik</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotell</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Sevärdheter</string>
