--- a/android/res/values-th/strings.xml
+++ b/android/res/values-th/strings.xml
@@ -198,6 +198,7 @@
 	<string name="parking">ที่จอดรถ</string>
 	<!-- Search Suggestion -->
 	<string name="shop">ร้านค้า</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">โรงแรม</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">สถานที่ท่องเที่ยว</string>
