--- a/android/res/values-uk/strings.xml
+++ b/android/res/values-uk/strings.xml
@@ -198,6 +198,7 @@
 	<string name="parking">Парковка</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Крамниця</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Готель</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Пам’ятні місця</string>
