--- a/android/res/values-zh/strings.xml
+++ b/android/res/values-zh/strings.xml
@@ -194,6 +194,7 @@
 	<string name="parking">停车</string>
 	<!-- Search Suggestion -->
 	<string name="shop">商店</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">旅店</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">景点</string>
