--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -200,6 +200,7 @@
 	<string name="parking">Parking</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Shop</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Sights</string>
