--- a/android/res/values-cs/strings.xml
+++ b/android/res/values-cs/strings.xml
@@ -193,6 +193,7 @@
 	<string name="parking">Parkoviště</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Obchod</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hotel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Pamětihodnost</string>
