--- a/android/res/values-it/strings.xml
+++ b/android/res/values-it/strings.xml
@@ -191,6 +191,7 @@
 	<string name="parking">Parcheggio</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Negozio</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Hôtel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Turistico</string>
