--- a/android/res/values-tr/strings.xml
+++ b/android/res/values-tr/strings.xml
@@ -198,6 +198,7 @@
 	<string name="parking">Otopark</string>
 	<!-- Search Suggestion -->
 	<string name="shop">Mağaza</string>
+	<!-- Search Suggestion -->
 	<string name="hotel">Otel</string>
 	<!-- Search Suggestion -->
 	<string name="tourism">Görülecek yerler</string>
