[android] added hotel nearby objects block

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -972,4 +972,5 @@
 	<string name="whats_new_booking_improve_title">Save when booking hotels</string>
 	<string name="whats_new_booking_improve_message">Search results for hotels now contain the price category.\nWe also added more than 110,000 hotels.</string>
 	<string name="placepage_hotel_facilities">Facilities</string>
+	<string name="placepage_hotel_nearby">Nearby</string>
 </resources>
