--- a/iphone/Maps/da.lproj/Localizable.strings
+++ b/iphone/Maps/da.lproj/Localizable.strings
@@ -1479,6 +1479,8 @@
 
 "placepage_more_button" = "Mere";
 
+"placepage_more_reviews_button" = "More Reviews";
+
 "bookingcom_book_button" = "Bog";
 
 "placepage_call_button" = "Ring";
@@ -1631,3 +1633,9 @@
 "whats_new_booking_improve_title" = "Spar penge når du bestiller hotelværelser";
 
 "whats_new_booking_improve_message" = "Søgeresultater for hoteller viser nu også priskategorien.\nVi har desuden tilføjet mere end 110.000 hoteller.";
+
+/* For place page hotel facilities block */
+"placepage_hotel_facilities" = "Facilities";
+
+/* For place page hotel nearby block */
+"placepage_hotel_nearby" = "Nearby";
