--- a/iphone/Maps/fi.lproj/Localizable.strings
+++ b/iphone/Maps/fi.lproj/Localizable.strings
@@ -1479,6 +1479,8 @@
 
 "placepage_more_button" = "Lisää";
 
+"placepage_more_reviews_button" = "More Reviews";
+
 "bookingcom_book_button" = "Varaa";
 
 "placepage_call_button" = "Soita";
@@ -1631,3 +1633,9 @@
 "whats_new_booking_improve_title" = "Säästä hotellivarauksissa";
 
 "whats_new_booking_improve_message" = "Hotellien hakutuloksissa näkyy nyt hintakategoria.\nLisäsimme myös yli 110 000 hotellia.";
+
+/* For place page hotel facilities block */
+"placepage_hotel_facilities" = "Facilities";
+
+/* For place page hotel nearby block */
+"placepage_hotel_nearby" = "Nearby";
