--- a/iphone/Maps/it.lproj/Localizable.strings
+++ b/iphone/Maps/it.lproj/Localizable.strings
@@ -1479,6 +1479,8 @@
 
 "placepage_more_button" = "Altro";
 
+"placepage_more_reviews_button" = "More Reviews";
+
 "bookingcom_book_button" = "Prenota";
 
 "placepage_call_button" = "Chiama";
@@ -1631,3 +1633,9 @@
 "whats_new_booking_improve_title" = "Risparmia alla prenotazione degli hotel";
 
 "whats_new_booking_improve_message" = "I risultati della ricerca per gli hotel contengono ora la categoria di prezzo.\nInoltre, abbiamo aggiunto più di 110.000 hotel.";
+
+/* For place page hotel facilities block */
+"placepage_hotel_facilities" = "Facilities";
+
+/* For place page hotel nearby block */
+"placepage_hotel_nearby" = "Nearby";
