--- a/iphone/Maps/pt.lproj/Localizable.strings
+++ b/iphone/Maps/pt.lproj/Localizable.strings
@@ -1479,6 +1479,8 @@
 
 "placepage_more_button" = "Mais";
 
+"placepage_more_reviews_button" = "More Reviews";
+
 "bookingcom_book_button" = "Livro";
 
 "placepage_call_button" = "Chamada";
@@ -1631,3 +1633,9 @@
 "whats_new_booking_improve_title" = "Poupe nas reservas de hotéis";
 
 "whats_new_booking_improve_message" = "Agora, os resultados da pesquisa de hotéis contêm a categoria de preços.\nAdicinámos mais de 110.000 hotéis.";
+
+/* For place page hotel facilities block */
+"placepage_hotel_facilities" = "Facilities";
+
+/* For place page hotel nearby block */
+"placepage_hotel_nearby" = "Nearby";
