--- a/iphone/Maps/uk.lproj/Localizable.strings
+++ b/iphone/Maps/uk.lproj/Localizable.strings
@@ -1479,6 +1479,8 @@
 
 "placepage_more_button" = "Ще";
 
+"placepage_more_reviews_button" = "More Reviews";
+
 "bookingcom_book_button" = "Забронювати";
 
 "placepage_call_button" = "Подзвонити";
@@ -1631,3 +1633,9 @@
 "whats_new_booking_improve_title" = "Заощаджуйте на бронюванні готелів";
 
 "whats_new_booking_improve_message" = "В результатах пошуку готелів на карті відображається цінова категорія.\nКрім того, тепер у нашій базі даних з'явилося 110 000 нових готелів.";
+
+/* For place page hotel facilities block */
+"placepage_hotel_facilities" = "Facilities";
+
+/* For place page hotel nearby block */
+"placepage_hotel_nearby" = "Nearby";
